--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
 		<title>Projeto Final Parte 1</title>
 		<meta charset="utf-8">
 		<style type="text/css">
+			*{
+				margin: 0;
+				padding: 0;
+			}
 			body{
 				font-family: arial, sans-serif;
 				text-align: center;
+			}
+
+			h1{
+				margin: 30px 0;
+			}
+
+			h1~p, #orientacoes h2{
+				margin-bottom: 20px;
+			}
+
+			ul li{
+				list-style: none;
+			}
+
+			#orientacoes{
+				width: 70%;
+				margin: 30px auto;
+				text-align: left;
+			}
+
+			#orientacoes p {
+				margin: 20px 0;
+				font-size: 15px;
+				line-height: 20px;
 			}
 		</style>
 	</head>
@@ -14,6 +42,32 @@
 		<h1>Projeto Final parte 01</h1>
 
 		<p>Codigo que representa um simples carrinho de E-commerce</p>
+
+		<div id="orientacoes">
+			<h2>Orientações</h2>
+
+			<p>Aperte "ctrl + shift + i" para abrir o console do browser</p>
+
+			<ul>
+				<li>
+					<p>Use o camando "let nome_produto = new Produto(identificação, nome, preço)" par criar o novo produto, passando o nome do objeto, e os parametros desejados para Produto()</p>
+				</li>
+
+				<li>
+					<p>Digite o camando "nome_produto.cartItem(quantidade)"" para adicionar a quantidade de produtos desejada. Será impresso o valor total dos produtos.</p>
+				</li>
+
+				<li>
+					<p>Para adicionar o produto ao carrinho digite o comando "cart.addItem(nome_produto)"</p>
+				</li>
+
+				<li>
+					<p>Para remover um dos produto do carrinho digite "cart.removeItem(numero_indice), passando como parametro o indicice do carrinho."</p>
+				</li>
+
+			</ul>
+		</div>
+
 
 		<script src="script.js"></script>
 	</body>
